fixed sticking out corner

--- a/Retrocade/style.css
+++ b/Retrocade/style.css
@@ -33,7 +33,8 @@
 #cssmenu #menu-button {
   margin: 0;
   padding: 0;
-  border: 0;
+  border: 10px;
+  border-radius: 30px;
   list-style: none;
   line-height: 1;
   display: block;
